--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James</title>
+    <title>James Thornton</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1> My Portfolio</h1>
-    <p>Test</p>
+    <h1>James Thornton</h1>
+    <p>
+        <img src="Headshot.jpg" alt="Photo of James">
+    </p>
 </body>
 </html>
