updated portfolio index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,46 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>James Thornton</h1>
     <p>
-        <img src="Headshot.jpg" alt="Photo of James">
+        <img src="headshot.jpg">
+        <h1>James Thornton</h1>
+        <br>
+        <div>
+            <b>About:</b> 
+            <br>
+            <br>
+            I served the US Army as an engineer officer for 10 years. 
+            Now I'm a technical program manager at Applied Materials. I also volunteer as a Texas state representative at Engineers Without Borders, and I study software enginneering on the side.
+        </div>
+        <div>
+        <br>
+            <b>Skills:</b>
+            <br>
+            <ul>
+                <li>Leadership</li>
+                <li>Engineering Management</li>
+                <li>Project/Program Management</li>
+                <li>Operations Management</li>
+            </ul>
+        </div>
+        <div>
+            <b>Work History:</b>
+            <br>
+            <ul>
+                <li>2021: Technical Program Manager, Applied Materials</li>
+                <li>2021: Sales Engineering Intern, Shift5</li>
+                <li>2011-2021: Engineer Officer, US Army</li>
+            </ul>
+        </div>
+        <div>
+            <b>Education</b>
+            <br>
+            <ul>
+                <li>MBA, The University of Texas</li>
+                <li>MS, Engineering Management, Missouri S&T</li>
+                <li>BS, Civil Engineering, USMA</li>
+            </ul>
+        </div>
     </p>
 </body>
 </html>
