--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <b>About:</b> 
             <br>
             <br>
-            I served the US Army as an engineer officer for 10 years. 
-            Now I'm a technical program manager at Applied Materials. I also volunteer as a Texas state representative at Engineers Without Borders, and I study software enginneering on the side.
+            I am a technical program manager at Applied Materials. My expertise is in leading diverse, cross-functional teams to solve tough problems.
+            I also volunteer as a Texas state representative at Engineers Without Borders, and I am a software engineer in my free time.
         </div>
         <div>
         <br>
