updates to index

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <p>
-        <img src="headshot.jpg">
+        <img src="headshot.jpg" class="head">    <a href = "https://www.linkedin.com/in/jamesedthornton/"><img src ="LI_logo.png" style="width:49px"></a>
         <h1>James Thornton</h1>
-        <br>
+    </body>
         <div>
             <b>About:</b> 
             <br>
@@ -49,5 +49,4 @@
             </ul>
         </div>
     </p>
-</body>
 </html>
